--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "amaa-remind",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
+  "description": "Telegram bot for Google Calendar reminders",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "chrono-node": "^2.9.0",
-    "dotenv": "^17.3.1",
-    "googleapis": "^171.4.0",
-    "node-cron": "^4.2.1",
-    "node-telegram-bot-api": "^0.67.0"
+    "@google/genai": "^1.43.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "chrono-node": "^2.7.2",
+    "dotenv": "^16.4.1",
+    "googleapis": "^131.0.0",
+    "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.64.0"
   }
 }
