--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@google/genai": "^1.43.0",
     "@mistralai/mistralai": "^1.14.1",
-    "@supabase/supabase-js": "^2.39.0",
     "chrono-node": "^2.7.2",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.45.1",
     "googleapis": "^131.0.0",
     "groq-sdk": "^0.37.0",
     "node-cron": "^3.0.3",
-    "node-telegram-bot-api": "^0.64.0"
+    "node-telegram-bot-api": "^0.64.0",
+    "postgres": "^3.4.8"
   }
 }
