--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
     "postgres": "^3.4.8"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.9"
   }
 }
